[package]
name = "day4"
version = "0.1.0"
authors = ["Matthew Campbell <matt@snowfort.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
itertools = "0.9.0"
validator = { version = "0.12", features = ["derive"] }
lazy_static = "1.4.0"